src/test/deca/syntax/invalid/sansobjet/lex_int_valid.deca
// Test: reconnaissance INT
// sortie :4 Token INT le  dernier nombre est le cas limite

0 12 100  434343  2147483647

